--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "electron-updater": "^6.3.9",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.543.0",
     "next-themes": "^0.4.6",
     "react-day-picker": "^9.9.0",
@@ -80,6 +81,7 @@
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^22.16.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
