--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/react-query": "^5.87.4",
     "acorn": "^8.15.0",
+    "axios": "^1.12.2",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
