--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "./out/main/index.js",
   "author": "Skilla",
   "homepage": "#",
+  "build": {
+    "appId": "com.fluxapi.app",
+    "productName": "FluxAPI"
+  },
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
