--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "FluxAPI Beta",
+  "name": "fluxapi-beta",
+  "productName": "FluxAPI Beta", 
   "version": "1.0.0-beta.1",
   "description": "A minimalist API client for developers.",
   "main": "./out/main/index.js",
@@ -7,7 +8,15 @@
   "homepage": "#",
   "build": {
     "appId": "com.fluxapi.app",
-    "productName": "FluxAPI"
+    "productName": "FluxAPI",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "M-Skilla",
+        "repo": "fluxapi",
+        "releaseType": "prerelease"
+      }
+    ]
   },
   "scripts": {
     "format": "prettier --write .",
