--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,36 +1,39 @@
 name: Manual Build and Release Electron App
 
 on:
-  workflow_dispatch:   # Manual trigger
+  workflow_dispatch: # Manual trigger
   push:
     tags:
-      - 'v*.*.*'       # Automatic trigger on tag push
+      - 'v*.*.*' # Automatic trigger on tag push
 
 jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        buildScript: [build:linux, build:win] # Match OS with script
+        include:
+          - os: ubuntu-latest
+            buildScript: build:linux
+          - os: windows-latest
+            buildScript: build:win
     runs-on: ${{ matrix.os }}
 
     steps:
       # 1️⃣ Checkout the repo
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 22
-          cache: 'pnpm'
-
-      # 3️⃣ Setup pnpm
+      # 2️⃣ Setup pnpm FIRST
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 8
+
+      # 3️⃣ Setup Node.js with pnpm cache
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: 'pnpm'
 
       # 4️⃣ Install dependencies
       - name: Install dependencies
@@ -42,11 +45,12 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: pnpm run ${{ matrix.buildScript }}
 
-      # 6️⃣ Upload release assets
+      # 6️⃣ Upload release assets (only on tag push)
       - name: Upload release assets
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
-          files: dist/*   # adjust if your output folder is different
+          files: dist/*
           prerelease: ${{ contains(github.ref_name, '-') }}
           tag_name: ${{ github.ref_name }}
         env:
