--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -39,11 +39,19 @@ jobs:
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
 
+      # 4.5️⃣ Install snapcraft (for Linux builds)
+      - name: Install snapcraft
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo snap install snapcraft --classic
+
       # 5️⃣ Build Electron app
       - name: Build Electron app
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          CI: true
+          ELECTRON_BUILDER_COMPRESSION_LEVEL: 1
         run: pnpm run ${{ matrix.buildScript }}
+        timeout-minutes: 30
 
       # 6️⃣ Upload release assets (only on tag push)
       - name: Upload release assets
