fix: add snap publish configuration to prevent publishing

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "build": {
     "appId": "com.fluxapi.app",
     "productName": "FluxAPI",
+    "snap": {
+      "publish": "never"
+    },
     "publish": [
       {
         "provider": "github",
